best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-23 -->
+<!-- 2022-09-26 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ASP.NET</title>
@@ -25,6 +25,8 @@
 <li><a href="#orgc86f394">1. 单机 到 CS 到 BS</a></li>
 <li><a href="#orgf85f0f3">2. ASP -&gt; ASP.NET -&gt; ASP.NET Core</a></li>
 <li><a href="#orgf93b76b">3. ASP.NET (Framework)</a></li>
+<li><a href="#org1db0838">4. ASP.NET Webform (Framework)</a></li>
+<li><a href="#orgc9f9719">5. ASP.NET MVC (Framework)</a></li>
 </ul>
 </div>
 </nav>
@@ -161,10 +163,28 @@ Global.asax:
 </ul>
 </div>
 </section>
+
+
+<section id="outline-container-org1db0838" class="outline-2">
+<h2 id="org1db0838"><span class="section-number-2">4.</span> ASP.NET Webform (Framework)</h2>
+</section>
+<section id="outline-container-orgc9f9719" class="outline-2">
+<h2 id="orgc9f9719"><span class="section-number-2">5.</span> ASP.NET MVC (Framework)</h2>
+<div class="outline-text-2" id="text-5">
+<p>
+MVC:
+</p>
+<ul class="org-ul">
+<li>Model (模型)</li>
+<li>View  (视图)</li>
+<li>Controller (控制器)</li>
+</ul>
+</div>
+</section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-09-23</p>
+<p class="date">Created: 2022-09-26</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
