--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -25,8 +25,8 @@
 <li><a href="#orgc86f394">1. 单机 到 CS 到 BS</a></li>
 <li><a href="#orgf85f0f3">2. ASP -&gt; ASP.NET -&gt; ASP.NET Core</a></li>
 <li><a href="#orgf93b76b">3. ASP.NET (Framework)</a></li>
-<li><a href="#org1db0838">4. ASP.NET Webform (Framework)</a></li>
-<li><a href="#orgc9f9719">5. ASP.NET MVC (Framework)</a></li>
+<li><a href="#orgc345950">4. ASP.NET Webform</a></li>
+<li><a href="#org1a00f89">5. ASP.NET MVC</a></li>
 </ul>
 </div>
 </nav>
@@ -165,11 +165,11 @@ Global.asax:
 </section>
 
 
-<section id="outline-container-org1db0838" class="outline-2">
-<h2 id="org1db0838"><span class="section-number-2">4.</span> ASP.NET Webform (Framework)</h2>
+<section id="outline-container-orgc345950" class="outline-2">
+<h2 id="orgc345950"><span class="section-number-2">4.</span> ASP.NET Webform</h2>
 </section>
-<section id="outline-container-orgc9f9719" class="outline-2">
-<h2 id="orgc9f9719"><span class="section-number-2">5.</span> ASP.NET MVC (Framework)</h2>
+<section id="outline-container-org1a00f89" class="outline-2">
+<h2 id="org1a00f89"><span class="section-number-2">5.</span> ASP.NET MVC</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 MVC:
