best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -58,8 +58,8 @@ scala
 经典、传统软件 (桌面软件):
 </p>
 <ul class="org-ul">
-<li>语言: C/C++/C#/Java/OC/Swift</li>
-<li>技术: Winform/WPF/UWP/MaUI Qt/GTK</li>
+<li>语言: C<i>C++</i>C#/Java<i>OC</i>Swift</li>
+<li>技术: Winform<i>WPF</i>UWP<i>MaUI Qt</i>GTK</li>
 </ul>
 
 <p>
@@ -142,7 +142,7 @@ Global.asax:
 <ul class="org-ul">
 <li>Application_Start/End</li>
 <li>Session_Start/End</li>
-<li>Application_BeginRequest/AuthenticateRequest/Error</li>
+<li>Application_BeginRequest<i>AuthenticateRequest</i>Error</li>
 </ul>
 
 <p>
@@ -168,6 +168,9 @@ Global.asax:
 <section id="outline-container-orgc345950" class="outline-2">
 <h2 id="orgc345950"><span class="section-number-2">4.</span> ASP.NET Webform</h2>
 </section>
+
+
+
 <section id="outline-container-org1a00f89" class="outline-2">
 <h2 id="org1a00f89"><span class="section-number-2">5.</span> ASP.NET MVC</h2>
 <div class="outline-text-2" id="text-5">
