--- a/html/miscellaneous/english.html
+++ b/html/miscellaneous/english.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-22 -->
+<!-- 2022-09-26 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>English</title>
@@ -58,13 +58,14 @@
 <li>Search , 搜索</li>
 <li>Replace, 代替</li>
 <li>Find   , 查找、寻找</li>
+<li>Q&amp;A    , Question and Answer, 问答</li>
 </ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-09-22</p>
+<p class="date">Created: 2022-09-26</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
