--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -17,7 +17,7 @@
 <body>
 <div id="content" class="content">
 <header>
-<h1 class="title">Sitemap for project _notes_yao63</h1>
+<h1 class="title">Sitemap for project <span class="underline">notes</span>yao63</h1>
 </header><ul class="org-ul">
 <li><a href="index.html">173.NET</a></li>
 <li>111
