best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -177,11 +177,11 @@ Global.asax:
 <h3 id="org2585d5b"><span class="section-number-3">4.1.</span> aspx 文件</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
-一个 aspx 主要包含如下内容。
+首先，可以将 aspx 文件看做一个加强版的 html 文件，所以，它完全接受 html 语法。
 </p>
 
 <p>
-首先，可以将 aspx 文件看做一个加强版的 html 文件，所以，它完全接受 html 语法:
+因此创建一个 Hello.aspx 文件，内容如下:
 </p>
 <div class="org-src-container">
 <pre class="src src-html"><span style="color: #000000;">&lt;</span><span style="color: #721045;">html</span><span style="color: #000000;">&gt;</span>
@@ -192,7 +192,7 @@ Global.asax:
 </div>
 
 <p>
-这时候，运行后，可以通过 <code>/localhost:port/Hello.aspx</code> 访问这个页面。浏览器中查看源代码可以看到内容跟上述一致。
+运行项目，可以通过 <code>/localhost:port/Hello.aspx</code> 访问这个页面。浏览器中查看源代码可以看到内容跟上述一致。
 </p>
 
 <p>
